--- a/TWebProject/Views/Shared/_LayoutRegister.cshtml
+++ b/TWebProject/Views/Shared/_LayoutRegister.cshtml
@@ -198,6 +198,7 @@
 
             // Redirecționează utilizatorul către pagina principală
             window.location.href = "/Home/Index";
+            window.location.href = "/ButtonAscuns/Index";
         });
     </script>
 </body>
