--- a/TWebProject/Views/Shared/_LayoutAnimal.cshtml
+++ b/TWebProject/Views/Shared/_LayoutAnimal.cshtml
@@ -20,5 +20,21 @@
 
     @RenderBody()
 
+    <div class="animal-profile">
+        <div class="animal-image">
+            <img src="pisi1.png" alt="Animal Image">
+        </div>
+        <div class="animal-info">
+            <h1>Animal Name</h1>
+            <p><strong>Species:</strong> Dog</p>
+            <p><strong>Breed:</strong> Labrador Retriever</p>
+            <p><strong>Age:</strong> 3 years</p>
+            <p><strong>Gender:</strong> Male</p>
+            <p><strong>Location:</strong> New York, NY</p>
+            <p><strong>Description:</strong> This is a friendly and energetic Labrador Retriever looking for a loving home. He loves to play and is great with children.</p>
+            <button class="adopt-button">Adopt Me</button>
+        </div>
+    </div>
+
 </body>
 </html>
