--- a/TWebProject/Views/Shared/header.cshtml
+++ b/TWebProject/Views/Shared/header.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "header";
 }
 
@@ -10,12 +9,11 @@
 </script>
 
 <ul>
-    <li><a class="active" href="/Home/Index">Home</a></li>
-    <li><a href="/Adopt/Index">Adopt</a></li>
-    <li><a href="donate.html">Donate</a></li>
-    <li><a href="adopt.html">Preferate</a></li>
-    <li style="float:right"><a href="/ContulMeu/Index">Contul meu</a></li>
-    <li style="float:right"><a href="/Login/Index">Login</a></li>
-    <li style="float:right"><a href="/Register/Index">Register</a></li>
+    <li><a class="@(ViewBag.ActivePage == "Home" ? "active" : "")" href="/Home/Index">Home</a></li>
+    <li><a class="@(ViewBag.ActivePage == "Adopt" ? "active" : "")" href="/Adopt/Index">Adopt</a></li>
+    <li><a class="@(ViewBag.ActivePage == "Donate" ? "active" : "")" href="/Donate/Index">Donate</a></li>
+    <li><a class="@(ViewBag.ActivePage == "Preferate" ? "active" : "")" href="adopt.html">Preferate</a></li>
+    <li style="float:right"><a class="@(ViewBag.ActivePage == "ContulMeu" ? "active" : "")" href="/ContulMeu/Index">Contul meu</a></li>
+    <li style="float:right"><a class="@(ViewBag.ActivePage == "Login" ? "active" : "")" href="/Login/Index">Login</a></li>
+    <li style="float:right"><a class="@(ViewBag.ActivePage == "Register" ? "active" : "")" href="/Register/Index">Register</a></li>
 </ul>
-
