--- a/TWebProject/css/style.css
+++ b/TWebProject/css/style.css
@@ -1,9 +1,9 @@
 ﻿body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
-    display: flex;
+    display: block;
     justify-content: center;
-    align-items: center;
+   
     height: 100vh;
     margin: 0;
 }
