--- a/TWebProject/css/style.css
+++ b/TWebProject/css/style.css
@@ -15,6 +15,10 @@
     width: 300px;
     padding: 20px;
     text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .profile-header {
