--- a/TWebProject/Views/Shared/_LayoutAnimal.cshtml
+++ b/TWebProject/Views/Shared/_LayoutAnimal.cshtml
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Adoptex</title>
     <link rel="stylesheet" href="~/Style/styleIndex.css">
+    <link rel="stylesheet" href="~/Style/styleAnimal.css">
 </head>
 
 <body style="background-color: azure ">
@@ -22,7 +23,7 @@
 
     <div class="animal-profile">
         <div class="animal-image">
-            <img src="pisi1.png" alt="Animal Image">
+            <img src="~/img/pisi1.png" alt="Animal Image">
         </div>
         <div class="animal-info">
             <h1>Animal Name</h1>
