--- a/TWebProject/Views/Shared/_LayoutButton.cshtml
+++ b/TWebProject/Views/Shared/_LayoutButton.cshtml
@@ -20,7 +20,8 @@
         <li><a class="active" href="/Home/Index">Home</a></li>
         <li><a href="/Adopt/Index">Adopt</a></li>
         <li><a href="donate.html">Donate</a></li>
-        <li><a href="adopt.html">Preferate</a></li>
+        <li><a href="/Preferate/Index">Preferate</a></li>
+        <li><a class="@(ViewBag.ActivePage == "Management" ? "active" : "")" href="/Management/Index">Management</a></li>
         <span></span>
         <li style="float:right"><a href="#deconectare">Deconectare</a></li>
         <li style="float:right"><a href="/ContulMeu/Index">Contul meu</a></li>
