--- a/TWebProject/Views/Shared/header.cshtml
+++ b/TWebProject/Views/Shared/header.cshtml
@@ -13,6 +13,7 @@
     <li><a class="@(ViewBag.ActivePage == "Adopt" ? "active" : "")" href="/Adopt/Index">Adopt</a></li>
     <li><a class="@(ViewBag.ActivePage == "Donate" ? "active" : "")" href="/Donate/Index">Donate</a></li>
     <li><a class="@(ViewBag.ActivePage == "Preferate" ? "active" : "")" href="/Preferate/Index">Preferate</a></li>
+    <li><a class="@(ViewBag.ActivePage == "Management" ? "active" : "")" href="/Management/Index">Management</a></li>
     <li style="float:right"><a class="@(ViewBag.ActivePage == "ContulMeu" ? "active" : "")" href="/ContulMeu/Index">Contul meu</a></li>
     <li style="float:right"><a class="@(ViewBag.ActivePage == "Login" ? "active" : "")" href="/Login/Index">Login</a></li>
     <li style="float:right"><a class="@(ViewBag.ActivePage == "Register" ? "active" : "")" href="/Register/Index">Register</a></li>
